# mayarepacker

./: MANIFEST.in  README.md  README_jp.md  setup.cfg  setup.py
MayaAutoPackageReloader/: __init__.py  controller.py  server.py  view.py
MayaAutoPackageReloader/ui/: MayaAutoPackageReloader.ui
src/mayarepacker/: __init__.py  app.py  controller.py  server.py  view.py
src/mayarepacker/ui/: MayaAutoPackageReloader.ui
