[metadata]
name = MayaAutoPackageReloader
description = Automatic package reloader for Maya.
url = https://github.com/InTack2/maya-auto-package-reloader
author = Tack2
author_email = takumi236@gmail.com
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: Microsoft :: Windows :: Windows 10
    Natural Language :: Japanese
keywords = PyInquirer, Inquirer, Maya
project_urls =
    # Documentation=https://intack2.github.io/til-note/Module/boip/
    Source=https://github.com/InTack2/maya-auto-package-reloader
    Tracker=https://github.com/InTack2/maya-auto-package-reloader/issues

[options]
zip_safe = False
packages = find:
package_dir=
    =src
include_package_data = true
python_requires = >=2.7
# python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
install_requires =
    watchdog==0.10.6
# tests_require =
#     pytest
#     tox

[options.packages.find]
where = src

# [aliases]
# test=pytest

# [tool:pytest]
# testpaths = ./tests
# python_files = test_*.py
# python_classes = Test
# python_functions = test_